# gh_flask

./: .gitignore  docker-compose.yaml  my_requirements.txt  pyproject.toml  requirements.txt  requrements_full.txt  wsgi.py
blog/: app.py  commands.py  config.py  extensions.py  models.py
blog/admin/: __init__.py  views.py
blog/api/: article.py  tag.py
blog/api/permissions/: user.py
blog/articles/: views.py
blog/auth/: views.py
blog/author/: views.py
blog/forms/: article.py  login.py  user.py
blog/report/: views.py
blog/schemas/: __init__.py  article.py  tag.py
blog/static/js/: bootstrap.bundle.min.js
blog/tags/: views.py
blog/templates/: base.html  navbar.html
blog/templates/admin/: index.html
blog/templates/articles/: create.html  details.html  list.html
blog/templates/auth/: login.html
blog/templates/authors/: list.html
blog/templates/macro/: formhelpers.html
blog/templates/reports/: details.html  list.html
blog/templates/tags/: details.html  list.html
blog/templates/users/: list.html  register.html
blog/user/: views.py
instance/: db.sqlite
migrations/versions/: 4bd6bdcbafc2_.py  831af061a4db_.py  b7047b4f7a41_.py  c4c0f5f2e6d0_.py  c7342a1ab35a_create_user_model.py  fab19369c374_.py
